fix(VCardHeaderText): add min-width for proper text truncate

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -93,6 +93,7 @@
 
 .v-card-header-text
   flex: 1 1 auto
+  min-width: 0
 
 .v-card-img
   border-radius: inherit
